unpackaged/main/default/objects/Acquiring_Fees__c/Acquiring_Fees__c.object-meta.xml
<CustomObject>
    <label>Acquiring Fees</label>
    <nameField>
        <displayFormat>AF-{0000}</displayFormat>
        <label>Acquiring Fees Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acquiring Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>