unpackaged/main/default/objects/Acquiring_Fees__c/fields/Acquiring_Volume__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Volume__c</fullName>
    <inlineHelpText>Enter value in Millions i.e 1000000 should be entered as 1</inlineHelpText>
    <label>Acquiring Volume (Millions)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>