unpackaged/main/default/objects/Acquiring_Fees__c/fields/Actual_Fee_Per_Click__c.field-meta.xml
<CustomField>
    <fullName>Actual_Fee_Per_Click__c</fullName>
    <inlineHelpText>Fee per click for all Verticals</inlineHelpText>
    <label>Actual Fee Per Click</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>