unpackaged/main/default/objects/Acquiring_Fees__c/fields/Actual_Fees__c.field-meta.xml
<CustomField>
    <fullName>Actual_Fees__c</fullName>
    <inlineHelpText>Enter actual Fees as a whole number i.e. for the bps value &#39;IC++: AF OF 25bps&#39;, enter 25, and for the value &#39;Blended: 1.60%&#39; enter 1.6</inlineHelpText>
    <label>Actual Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>