unpackaged/main/default/objects/Acquiring_Fees__c/fields/Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Approval_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has approval been received if actual fee is less than minimum?</inlineHelpText>
    <label>Has approval been received?</label>
    <type>Checkbox</type>
</CustomField>