unpackaged/main/default/objects/Acquiring_Fees__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <label>Minimum Fees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>