unpackaged/main/default/objects/Acquiring_Fees__c/fields/Fees_Require_Approval__c.field-meta.xml
<CustomField>
    <fullName>Fees_Require_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fees Require Approval</label>
    <type>Checkbox</type>
</CustomField>