unpackaged/main/default/objects/Acquiring_Fees__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Click Per Fee Margin</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>