unpackaged/main/default/objects/Acquiring_Fees__c/fields/No_of_Transactions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Transactions__c</fullName>
    <label>No of Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>