unpackaged/main/default/objects/Acquiring_Fees__c/fields/Overall__c.field-meta.xml
<CustomField>
    <fullName>Overall__c</fullName>
    <formula>Profit__c  +  Transaction_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>