unpackaged/main/default/objects/Acquiring_Fees__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Setup__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS/Online PBL</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Online PBL</fullName>
            </value>
            <value>
                <fullName>Online Cybersource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>