unpackaged/main/default/objects/Acquiring_Fees__c/fields/Setup__c.field-meta.xml
<CustomField>
    <fullName>Setup__c</fullName>
    <label>Setup</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stand Alone</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>