unpackaged/main/default/objects/Acquiring_Fees__c/fields/Temp_Profit__c.field-meta.xml
<CustomField>
    <fullName>Temp_Profit__c</fullName>
    <formula>IF( ISPICKVAL(Scheme__c , &quot;Visa/Mastercard&quot;), (Acquiring_Volume__c  *  Actual_Fees__c) * 100,
IF( ISPICKVAL(Scheme__c , &quot;Union Pay&quot;), 888,
 999))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit (Temp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>