unpackaged/main/default/objects/Acquiring_Fees__c/validationRules/Both_Fees_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_Fees_Check</fullName>
    <active>true</active>
    <description>You cannot enter both &#39;Actual Fees&#39; and &#39;Actual Fees Per Click&#39;.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Actual_Fee_Per_Click__c)),
NOT(ISBLANK(Actual_Fees__c))
)</errorConditionFormula>
    <errorMessage>You cannot enter both &#39;Actual Fees&#39; and &#39;Actual Fees Per Click&#39;.</errorMessage>
</ValidationRule>