unpackaged/main/default/objects/Acquiring_Fees__c/validationRules/Fees_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Fees_Check</fullName>
    <active>true</active>
    <description>When entering Acquiring Fees, either &#39;Actual Fees&#39; or both &#39;Actual Fee Per Click&#39; and &#39;No of Transactions&#39; fields must be entered.</description>
    <errorConditionFormula>AND(
ISBLANK(Actual_Fee_Per_Click__c),
ISBLANK(Actual_Fees__c),
ISBLANK(No_of_Transactions__c)
)</errorConditionFormula>
    <errorMessage>When entering Acquiring Fees, either &#39;Actual Fees&#39; or both &#39;Actual Fee Per Click&#39; and &#39;No of Transactions&#39; fields must be entered.</errorMessage>
</ValidationRule>