unpackaged/main/default/objects/Acquiring_Fees__c/validationRules/Parking_Fees_Click_Transactions_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Parking_Fees_Click_Transactions_Check</fullName>
    <active>true</active>
    <description>When entering Parking Fees, if either &#39;No of Transactions&#39; or &#39;Actual Fees Per Click&#39; is entered, then both fields must be entered.</description>
    <errorConditionFormula>AND(
TEXT(Vertical__c ) = &#39;Parking&#39;,
OR(
AND(
NOT(ISBLANK(Actual_Fee_Per_Click__c)),
ISBLANK(No_of_Transactions__c)
),
AND(
ISBLANK(Actual_Fee_Per_Click__c),
NOT(ISBLANK(No_of_Transactions__c))
)
)
)</errorConditionFormula>
    <errorMessage>When entering Parking Fees, if either &#39;No of Transactions&#39; or &#39;Actual Fees Per Click&#39; is entered, then both fields must be entered.</errorMessage>
</ValidationRule>